create start of user flow from login to dashboard
The login page used to lead to a test page with a bunch of links. Now it leads to the home page, which then links to the dashboard. The dashboard is blank at the moment, but the next step will be to fill it in so the user can access lessons.

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="">
   <head>
+    <title>DCTP Learning Platform</title>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
@@ -8,6 +9,7 @@
     <title><%= htmlWebpackPlugin.options.title %></title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <!-- TODO: install this font so it's available offline -->
     <link
       href="https://fonts.googleapis.com/css2?family=Tourney:wght@700&display=swap"
       rel="stylesheet"
