--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="">
+<html lang="es">
   <head>
     <title>DCTP Learning Platform</title>
     <meta charset="utf-8" />
